fix idle clock wrapping

--- a/Service/Themes/Default/css.css
+++ b/Service/Themes/Default/css.css
@@ -2008,6 +2008,7 @@ textarea {
 /* stylelint-disable no-descending-specificity */
 #statusers a {
     margin-left: 5px;
+    white-space: nowrap;
 }
 /* stylelint-enable no-descending-specificity */
 
